# claude-pascal-mcp

./: .gitignore  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pascal_mcp/: compiler.py  ide_observer.py  ios_sim.py  iosdeploy.py  mac_ssh.py  paclient.py  screenshot.py  server.py  templates.py
