[project]
name = "claude-pascal-mcp"
version = "0.12.1"
description = "MCP server for Pascal/Delphi/Lazarus compilation and execution with Claude"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tina4 Community" },
]
keywords = ["mcp", "pascal", "delphi", "lazarus", "freepascal", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/tina4stack/claude-pascal-mcp"
Repository = "https://github.com/tina4stack/claude-pascal-mcp"
Issues = "https://github.com/tina4stack/claude-pascal-mcp/issues"

[project.scripts]
pascal-mcp = "pascal_mcp.server:main"
pascal-preview = "pascal_mcp.preview_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pascal_mcp"]
